Updated project file, readme

--- a/RevStackCore.Cache.Memory/RevStackCore.Cache.Memory.csproj
+++ b/RevStackCore.Cache.Memory/RevStackCore.Cache.Memory.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.5</TargetFramework>
+	<PackageId>RevStackCore.Cache.Memory</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>S. Francis</Authors>
+    <Description>IMemoryCache implementation of the RevStackCore generic cache repository</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>Net Standard 1.5 release</PackageReleaseNotes>
+    <Copyright>Copyright 2017</Copyright>
+    <PackageTags>RevStackCore Cache Memory</PackageTags>		
   </PropertyGroup>
 
   <ItemGroup>
