--- a/RevStackCore.Cache.Memory/RevStackCore.Cache.Memory.csproj
+++ b/RevStackCore.Cache.Memory/RevStackCore.Cache.Memory.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.5</TargetFramework>
 	<PackageId>RevStackCore.Cache.Memory</PackageId>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>1.0.1</PackageVersion>
     <Authors>S. Francis</Authors>
     <Description>IMemoryCache implementation of the RevStackCore generic cache repository</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -13,11 +13,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory">
-      <Version>1.1.0</Version>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.0">
     </PackageReference>
-    <PackageReference Include="RevStackCore.Cache">
-      <Version>1.0.1</Version>
+    <PackageReference Include="RevStackCore.Cache" Version="1.0.1">
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
